# pyflic

./: .gitignore  CHANGELOG.md  README.md  __init__.py  __main__.py  experiment.py  flic_config.yaml  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: claude.yml  daily_docs.yaml
base/: config_editor.py  dfm.py  experiment.py  experiment_design.py  hedonic_experiment.py  qc_viewer.py  yaml_config.py
doc/: 01_GettingStarted.ipynb  02_GroupedAnalysis.ipynb  03_ChoiceChamberAnalysis.ipynb  HedonicFeeding.ipynb  INSTALL.md  PLOTS.md  ProgressiveRatio.ipynb  USAGE.md
notebooks/: 01_GettingStarted.ipynb  HedonicFeeding.ipynb
pyflic/: __init__.py  __main__.py
pyflic/base/: analysis_hub.py  analytics.py  cache.py  chamber.py  config_editor.py  dfm.py  experiment.py  hedonic_experiment.py  pdf_report.py  progressive_ratio_experiment.py  qc_viewer.py  yaml_config.py  yaml_lint.py
pyflic/base/algorithms/: events.py  feeding.py  tasting.py
pyflic/base/script_editor/: __init__.py  actions.py  canvas.py  inspector.py  palette.py  preview.py  window.py
pyflic/base/ui/: __init__.py  icons.py  settings.py  theme.py  widgets.py
pyflic/doc/: 01_GettingStarted.ipynb  INSTALL.md
scripts/: RRmodified_ScottsTwoChoice_12Dec23.R  prog_assay_two_choice.py  run_dfm1_feeding_summary.py  run_experiment_from_yaml.py
test/: load_experiment.ipynb  run_flic_config_6h.py
tests/: test_analytics.py  test_events.py  test_link_events_properties.py  test_parity_r.py  test_yaml_requirements.py
